# network-mcp-chat

./: .gitignore  Dockerfile  Dockerfile.python  README.md  agent.py  agent_class.py  autonomous_agent.py  chat_server.py  chat_ui.html  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  env.example  graph_test.html  hash_password.js  hexstrike_mcp.py  hexstrike_server.py  main.py  main.tf  main_cisco.py  main_fwdnetwork.py  main_hexstrike.py  mcp_cisco_c2960cx_server.py  mcp_ciscoclient.py  mcp_fwdnetworkserver.py  mcp_server.py  netopsAgent.py  nginx.conf  package.json  pyproject.toml  server.js  variables.tf
app.egg-info/: PKG-INFO
core/: chat_server.py
public/: index.html  login.html
