[project]
name = "app"
version = "0.1.0"
description = "MCP Chat with local LLM (Ollama)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "mcp[cli]>=1.8.0",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.1.0",
    "netmiko>=4.6.0",
]

[tool.setuptools.packages.find]
exclude = ["assets*", "public*", "node_modules*", "tests*"]

[pip]
link-mode = "copy"